# MyTorch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  install_criterion.sh  test.cc  test.hh
cmake/: clang-format.cmake  clang-tidy.cmake  color.cmake  opencv.cmake
data/: linear1.mt  linear2.mt  mlp-mnist-normalized.mt  mlp-mnist.mt  mlp.mt
include/mnist/: mnist_utils.hpp
scripts/: benchmark.cc  gcov_filelist.sh
scripts/sanitizer/: asan_config.cpp  lsan_config.cpp
src/: main.cc  main.cpp  utils.hh  utils.hxx
src/cv/: cv.cc  cv.hh
src/dataset/: dataset.hh  dataset.hxx  dataset_io.hxx  mnist.cc  mnist.hh  mnist.hxx  supervised.cc  supervised.hh  supervised.hxx
src/exception/: exception.hh  layer.hh  tensor.hh
src/layer/: activation.hxx  layer.hh  layer.hxx  linear.hxx  linear_serialize.hxx  loss.hxx  perceptron.hxx  weights.cc  weights.hh  weights.hxx
src/layer/block/: perceptron.hxx
src/mt/: imt.hh  mt.hh  mt.hxx  tensor.hxx
src/tensor/: tensor.hh  tensor.hxx  tensor_activation.hxx  tensor_backend.hxx  tensor_bool.cc  tensor_bool.hxx  tensor_functional.hxx  tensor_fwd.hh  tensor_io.cc  tensor_io.hxx  tensor_math.hxx  tensor_op.hxx  tensor_serialize.hxx  tensor_utils.hxx
src/tensor/backend/: backend.hh  backend_fwd.hh  concept.hh
src/tensor/backend/cpp/: backend.hh  cpp_backend.hh  cpp_linear.hxx  cpp_math.hxx  linear.hxx  math.hxx
src/tensor/backend/eigen/: backend.hh  eigen_backend.hh  eigen_linear.hxx  linear.hxx
src/tensor/functional/: tensor_activation.hxx  tensor_linear.hxx
src/utils/: pattern.hh  progress.hh  random.hh
src/xor/: xor.cc  xor.hh  xor.hxx  xor_utils.cc
tests/: test.cc  test.hh  utils.hh
tests/functional/: functional.hh  linear.cc  or.cc  xor.cc
tests/tensor/: broadcast.cc  c_types.hh  matmul.cc  tensor.cc  tensor.hh
tests/tensor/tensor_bool/: raise.cc
tests/utils/: assert.hh  macro.hh  runner.hxx  utils.hh
